--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,24 +1,25 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@middlewares/*": ["packages/middlewares/*"]
-    },
-    "composite": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "importHelpers": true,
-    "isolatedModules": true,
-    "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "es2022",
-    "customConditions": ["@multi-vendor-ecommerce/source"]
+  "baseUrl": ".",   // needed to solve an error (base url)
+  "paths": {
+    "@multi-vendor-ecommerce/shared-backend": ["libs/shared-backend/src/index.ts"]   // neede for shared libs
+  },
+  "composite": true,
+  "declarationMap": true,
+  "emitDeclarationOnly": true,
+  "importHelpers": true,
+  "isolatedModules": true,
+  "lib": ["es2022"],
+  "module": "nodenext",
+  "moduleResolution": "nodenext",
+  "noEmitOnError": true,
+  "noFallthroughCasesInSwitch": true,
+  "noImplicitOverride": true,
+  "noImplicitReturns": true,
+  "noUnusedLocals": true,
+  "skipLibCheck": true,
+  "strict": true,
+  "target": "es2022",
+  "customConditions": ["@multi-vendor-ecommerce/source"]
   }
 }
