fix: update tsconfig.app to include specific shared-backend library path

--- a/auth-service/tsconfig.app.json
+++ b/auth-service/tsconfig.app.json
@@ -8,7 +8,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "../libs/**/*.ts" // neede for shared libs
+    "../libs/shared-backend/**/*.ts" // neede for shared libs
   ],
   "exclude": [
     "out-tsc",
